force-app/main/default/objects/CustomerFinancialAccount__c/CustomerFinancialAccount__c.object-meta.xml
<CustomObject>
    <label>Customer Financial Account</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>AccountFNAccount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Financial Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>