force-app/main/default/objects/CustomerFinancialAccount__c/fields/FinancialAccount__c.field-meta.xml
<CustomField>
    <fullName>FinancialAccount__c</fullName>
    <label>FinancialAccount</label>
    <referenceTo>FinancialAccount__c</referenceTo>
    <relationshipName>Account_FN_Account</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>