force-app/main/default/objects/CustomerFinancialAccount__c/fields/RelationStatus__c.field-meta.xml
<CustomField>
    <fullName>RelationStatus__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Relation Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>