force-app/main/default/objects/CustomerFinancialAccount__c/fields/RelationTypeCode__c.field-meta.xml
<CustomField>
    <fullName>RelationTypeCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Relation Type Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>