force-app/main/default/objects/CustomerFinancialAccount__c/fields/RelationTypeDescription__c.field-meta.xml
<CustomField>
    <fullName>RelationTypeDescription__c</fullName>
    <formula>&quot;-- Place Holder for caluclated Field&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relation Type Description</label>
    <type>Text</type>
</CustomField>